# IoT_Water_Conservancy_Project

./: .gitignore  Dockerfile  README.md  deploy-windows.ps1  deploy.ps1  docker-compose.yml  docker-deploy.sh  install_websocket_deps.py  simple_websocket_demo.py  simple_websocket_test.py  simple_ws_test.py  ssh-connect-guide.md  start_realtime_system.py  start_services.ps1  test_websocket.html  websocket_demo.html  websocket_server.py  websocket_test.html  working_websocket.py  ws_test.html
WaterConservancyIoT/: .gitignore  API_DOCUMENTATION.md  CMakeLists.txt  COMPLETE_SYSTEM_START.bat  DATABASE_DESIGN.md  DEBUGGING_WEBSOCKET_SUMMARY.md  DEMO_GUIDE.md  DEPLOY.md  LEARNING_PROGRESS_CHECKLIST.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_STATUS_CHECKLIST.md  README.md  START_AI_SERVICE.bat  START_SYSTEM.bat  SYSTEM_ARCHITECTURE_OVERVIEW.md  SYSTEM_STATUS.md  auth_service.py  create_database.sql  data_producer.py  debug_data_flow.py  fix_redis_data.py  mysql_client.py  redis_client.py  requirements.txt  simple_api_server.cpp  simple_server.py  simple_test.cpp  start_production.py  test_system.cpp  test_system_en.cpp  working_websocket.py
WaterConservancyIoT/ai_service/: AI_MODULE_README.md  ALIBABA_SETUP.md  BAIDU_QIANFAN_SETUP.md  BAIDU_SETUP_GUIDE.md  CURRENT_AI_STATUS.md  FREE_AI_GUIDE.md  GET_BAIDU_API_KEY.md  README.md  ai_client.py  app.py  config.py  config_example.py  requirements.txt  setup_ai_env.bat  start.py  start_ai_service.bat  start_ai_service.sh  test_baidu_config.py  test_qianfan_v2.py  test_real_api.py
WaterConservancyIoT/ai_service/ai_env/: pyvenv.cfg
WaterConservancyIoT/ai_service/ai_env/Scripts/: activate  activate.bat  get_gprof  get_objgraph  undill
WaterConservancyIoT/cmake_examples/gtest_demo/: CMakeLists.txt  basic_assertions.cpp  basic_assertions_simple.cpp  exception_tests.cpp  sensor_test_fixture.cpp  sensor_test_simple.cpp
WaterConservancyIoT/cmake_examples/library_comparison/: CMakeLists.txt  main.cpp  math_functions.cpp  math_functions.h
WaterConservancyIoT/cmake_examples/library_example/: CMakeLists.txt  main.cpp
WaterConservancyIoT/cmake_examples/library_example/math/: math_operations.cpp  math_operations.h
WaterConservancyIoT/cmake_examples/library_example/string/: string_utils.cpp  string_utils.h
WaterConservancyIoT/cmake_examples/simple_example/: CMakeLists.txt  build.ninja  calculator.cpp  calculator.h  main.cpp
WaterConservancyIoT/config/: development.json
WaterConservancyIoT/docs/: API_INTERFACE_TABLES.md  ai-extension-plan.md  ai-module-design.md  business-flowchart.md  cmake-learning-guide.md  database-er-mermaid.md  module-architecture.md  ppt-software-design.md  project-value-and-demo.md  system-diagrams.md  system-flowchart.md
WaterConservancyIoT/docs/presentation/: SYSTEM_DESIGN_PPT_CONTENT.md  ppt-content-outline.md  project-highlights.md  system-architecture-diagrams.md  system-flow-diagrams.md
WaterConservancyIoT/frontend/: ai-analysis.html  dashboard.html  index.html  login.html  main.html  system-management.html  websocket_test.html
WaterConservancyIoT/frontend/css/: main.css
WaterConservancyIoT/frontend/js/: websocket-client.js
WaterConservancyIoT/scripts/: build.sh
WaterConservancyIoT/src/: complete_system.cpp  demo_system.cpp  main.cpp
WaterConservancyIoT/src/api_server/include/: http_server.h
WaterConservancyIoT/src/api_server/src/: placeholder.cpp
WaterConservancyIoT/src/common/include/: config.h  logger.h  utils.h
WaterConservancyIoT/src/common/src/: config.cpp  logger.cpp  utils.cpp
WaterConservancyIoT/src/data_processor/include/: data_processor.h
WaterConservancyIoT/src/data_processor/src/: placeholder.cpp
WaterConservancyIoT/src/messaging/include/: message_queue.h
WaterConservancyIoT/src/messaging/src/: message_queue.cpp
WaterConservancyIoT/src/sensors/include/: sensor_base.h  temperature_sensor.h  water_level_sensor.h
WaterConservancyIoT/src/sensors/src/: sensor_base.cpp  temperature_sensor.cpp  water_level_sensor.cpp
WaterConservancyIoT/src/storage/include/: redis_storage.h
WaterConservancyIoT/src/storage/src/: placeholder.cpp
WaterConservancyIoT/src/threading/include/: sensor_processor.h  thread_pool.h
WaterConservancyIoT/src/threading/src/: sensor_processor.cpp  thread_pool.cpp
WaterConservancyIoT/tests/: CMakeLists.txt  basic_test.cpp  test_sensors_simple.cpp
WaterConservancyIoT/websocket_env/: pyvenv.cfg
frontend/js/: websocket-client.js
