# ðŸ—ï¸ åº“ä½¿ç”¨ç¤ºä¾‹ - å±•ç¤ºå¦‚ä½•åˆ›å»ºå’Œä½¿ç”¨åº“
cmake_minimum_required(VERSION 3.16)
project(LibraryExample)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# ðŸ“Š ç¬¬1æ­¥ï¼šåˆ›å»ºæ•°å­¦åº“
add_library(math_lib STATIC        # åˆ›å»ºé™æ€åº“
    math/math_operations.cpp
    math/math_operations.h
)

# ðŸ“Š ä¸ºåº“è®¾ç½®åŒ…å«ç›®å½•
target_include_directories(math_lib PUBLIC math/)  # PUBLIC: ä½¿ç”¨è¿™ä¸ªåº“çš„ç¨‹åºä¹Ÿèƒ½çœ‹åˆ°math/ç›®å½•

# ðŸ“Š ç¬¬2æ­¥ï¼šåˆ›å»ºå­—ç¬¦ä¸²å¤„ç†åº“
add_library(string_lib STATIC
    string/string_utils.cpp
    string/string_utils.h
)

target_include_directories(string_lib PUBLIC string/)

# ðŸ“Š ç¬¬3æ­¥ï¼šåˆ›å»ºä¸»ç¨‹åº
add_executable(main_program
    main.cpp
)

# ðŸ”— ç¬¬4æ­¥ï¼šè¿žæŽ¥åº“
target_link_libraries(main_program 
    math_lib        # ä¸»ç¨‹åºä½¿ç”¨æ•°å­¦åº“
    string_lib      # ä¸»ç¨‹åºä½¿ç”¨å­—ç¬¦ä¸²åº“
)

# ðŸ“ è¾“å‡ºæž„å»ºä¿¡æ¯
message(STATUS "=== åº“ç¤ºä¾‹æž„å»ºä¿¡æ¯ ===")
message(STATUS "ðŸ“š åˆ›å»ºçš„åº“: math_lib, string_lib")
message(STATUS "ðŸ“± ä¸»ç¨‹åº: main_program")
message(STATUS "ðŸ”— ä¾èµ–å…³ç³»: main_program -> math_lib + string_lib")

# ðŸŽ¯ æž„å»ºå‘½ä»¤:
# mkdir build && cd build
# cmake ..
# cmake --build .
